cmake_minimum_required(VERSION 3.5)

project(playground)

add_executable(hello_world hello_world.c)
add_executable(arrays arrays.c)
add_executable(unions unions.c)
add_executable(bitwise bitwise.c)
add_executable(matrix matrix.c)
add_executable(lists lists.c)
add_executable(binary_tree binary_tree.c)
add_executable(generics generics.c)